modified:   backend-spring/src/main/java/com/example/backendspring/client/ClientController.java 	modified:   backend-spring/src/main/java/com/example/backendspring/sale/AuditController.java 	modified:   backend-spring/src/main/java/com/example/backendspring/sale/CheckoutController.java 	modified:   backend-spring/src/main/java/com/example/backendspring/sale/SaleController.java 	modified:   backend-spring/src/main/java/com/example/backendspring/sale/SaleOrderRepository.java 	modified:   backend-spring/src/main/java/com/example/backendspring/sale/SaleRepository.java 	modified:   frontend/src/app/components/clientes/clientes.html 	modified:   frontend/src/app/components/clientes/clientes.scss 	modified:   frontend/src/app/components/clientes/clientes.ts 	modified:   frontend/src/app/components/historico-deletados/historico-deletados.html 	modified:   frontend/src/app/components/historico-deletados/historico-deletados.ts 	modified:   frontend/src/app/components/historico-vendas/historico-vendas.html 	modified:   frontend/src/app/components/historico-vendas/historico-vendas.ts 	modified:   frontend/src/app/components/ponto-venda/ponto-venda.html 	modified:   frontend/src/app/components/ponto-venda/ponto-venda.ts 	modified:   frontend/src/app/components/relatorio-vendas/relatorio-vendas.html 	modified:   frontend/src/app/components/relatorio-vendas/relatorio-vendas.scss 	modified:   frontend/src/app/components/relatorio-vendas/relatorio-vendas.ts 	modified:   frontend/src/app/services/api.ts